# oh-my-claudecode-RS

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_GAPS.md  codecov.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  release.yml
crates/omc-autoresearch/: Cargo.toml
crates/omc-autoresearch/src/: lib.rs  orchestrator.rs  prd.rs  runtime.rs  types.rs
crates/omc-cli/: Cargo.toml
crates/omc-cli/src/: dispatch.rs  main.rs
crates/omc-cli/src/commands/: mod.rs
crates/omc-context/: Cargo.toml
crates/omc-context/src/: agents_md.rs  context_injector.rs  lib.rs  rules_injector.rs
crates/omc-git-provider/: Cargo.toml
crates/omc-git-provider/src/: azure_devops.rs  bitbucket.rs  gitea.rs  github.rs  gitlab.rs  lib.rs  types.rs
crates/omc-hooks/: Cargo.toml
crates/omc-hooks/src/: config.rs  events.rs  executor.rs  lib.rs  registry.rs
crates/omc-host/: Cargo.toml
crates/omc-host/src/: adapter.rs  config_state.rs  lib.rs  mcp_reg.rs  types.rs  unified_hooks.rs
crates/omc-host/src/claude/: agents.rs  config.rs  doctor.rs  hooks.rs  init.rs  mod.rs
crates/omc-host/src/codex/: agents.rs  config.rs  doctor.rs  hooks.rs  init.rs  mod.rs
crates/omc-hud/: Cargo.toml
crates/omc-hud/src/: cache.rs  i18n.rs  input.rs  main.rs  render.rs  terminal.rs
crates/omc-hud/src/elements/: autopilot.rs  cjk_width.rs  color_degrade.rs  context.rs  context_eta.rs  cost.rs  git_status.rs  mod.rs  model_name.rs  prompt_time.rs  rate_limits.rs  todos.rs  token_usage.rs  xcmd.rs
crates/omc-installer/: Cargo.toml  build.rs
crates/omc-installer/src/: config.rs  installer.rs  lib.rs  updater.rs
crates/omc-installer/templates/custom-skills-guide/: README.md
crates/omc-interop/: Cargo.toml
crates/omc-interop/src/: lib.rs  mcp_bridge.rs  omx_team_state.rs  shared_state.rs
crates/omc-macros/: Cargo.toml
crates/omc-macros/src/: lib.rs
crates/omc-mcp/: Cargo.toml
crates/omc-mcp/src/: lib.rs  main.rs  memory_tools.rs  notepad_tools.rs  protocol_registry.rs  state_tools.rs  tool_registry.rs
crates/omc-mcp/src/tools/: mod.rs
crates/omc-notifications/: Cargo.toml
crates/omc-notifications/src/: dispatcher.rs  lib.rs  slack.rs  template.rs  tmux.rs  types.rs
crates/omc-python/: Cargo.toml
crates/omc-python/src/: executor.rs  lib.rs  repl.rs
crates/omc-shared/: Cargo.toml
crates/omc-shared/src/: context_strategy.rs  events.rs  lib.rs  paths.rs  prelude.rs  resilience.rs  shared_memory.rs
crates/omc-shared/src/config/: mod.rs  paths.rs
crates/omc-shared/src/memory/: mod.rs  reasoning_bank.rs
crates/omc-shared/src/routing/: mod.rs  prompts.rs  router.rs  rules.rs  scorer.rs  signals.rs  tests.rs  types.rs
crates/omc-shared/src/state/: mod.rs  reader.rs  writer.rs
crates/omc-shared/src/tools/: ast_tools.rs  lsp_tools.rs  mcp_adapter.rs  memory_tools.rs  mod.rs  notepad_tools.rs  state_tools.rs  tool_trait.rs
crates/omc-shared/src/types/: hooks.rs  mod.rs  team.rs
crates/omc-skills/: Cargo.toml
crates/omc-skills/src/: bootstrap.rs  executor.rs  frontmatter.rs  lib.rs  loader.rs  register.rs  state.rs  templates.rs
crates/omc-skills/src/templates/: deep-interview-questions.md  diagnose.md  improve-codebase-architecture.md  prototype.md  tdd.md  to-issues.md  triage.md
crates/omc-skills/tests/: integration.rs
crates/omc-team/: Cargo.toml
crates/omc-team/src/: agent_handle.rs  agent_lifecycle.rs  dispatch.rs  fault_tolerance.rs  forbidden.rs  governance.rs  heartbeat.rs  idle_nudge.rs  lib.rs  main.rs  observability.rs  phase_controller.rs  ralph.rs  role_router.rs  runtimes.rs  task_graph.rs  trackers.rs  usage.rs  work_stealing.rs  worker_health.rs
crates/omc-team/src/agents/: mod.rs  ralph.rs  ralplan.rs  role_router.rs
crates/omc-team/src/background/: concurrency.rs  manager.rs  mod.rs
crates/omc-team/src/communication/: inbox.rs  message_router.rs  mod.rs  outbox.rs  types.rs
crates/omc-wiki/: Cargo.toml
crates/omc-wiki/src/: lib.rs  storage.rs  wiki.rs
crates/omc-wiki/tests/: wiki_operations.rs
crates/omc-xcmd/: Cargo.toml
crates/omc-xcmd/src/: executor.rs  lib.rs  main.rs  skills.rs
docs/: DEVELOPMENT_SYNC.md  agent-orchestration-layer.md  onboarding.md
scripts/: x-linear.sh
templates/: team.md  ultrawork.md
tests/macro-tests/: Cargo.toml
tests/macro-tests/src/: lib.rs
