[workspace]
resolver = "2"
members = [
    "crates/omc-hud",
    "crates/omc-xcmd",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["2233admin"]
repository = "https://github.com/2233admin/oh-my-claudecode-RS"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
mimalloc = { version = "0.1", default-features = false }
unicode-width = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.release.package.omc-hud]
opt-level = "z"
