[workspace]
resolver = "2"
members = [
    "crates/omc-autoresearch",
    "crates/omc-cli",
    "crates/omc-context",
    "crates/omc-git-provider",
    "crates/omc-hud",
    "crates/omc-hooks",
    "crates/omc-installer",
    "crates/omc-interop",
    "crates/omc-mcp",
    "crates/omc-notifications",
    "crates/omc-python",
    "crates/omc-skills",
    "crates/omc-team",
    "crates/omc-shared",
    "crates/omc-wiki",
    "crates/omc-xcmd",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["2233admin"]
repository = "https://github.com/2233admin/oh-my-claudecode-RS"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
mimalloc = { version = "0.1", default-features = false }
unicode-width = "0.2"
dirs = "5"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.release.package.omc-hud]
opt-level = "z"
