[package]
name = "omc-host"
description = "Host abstraction layer for Claude Code and Codex CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
omc-shared = { path = "../omc-shared" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
