[package]
name = "omc-installer"
description = "Installation, update, and configuration management for oh-my-claudecode"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempfile = { workspace = true }
