[package]
name = "omc-interop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cross-tool interoperability layer for OMC/OMX communication"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
