[package]
name = "omc-team"
description = "Claude Code agent team orchestration shell for OMC-RS"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dirs = "5"

[[bin]]
name = "omc-team"
path = "src/main.rs"
