[package]
name = "omc-team"
description = "Claude Code agent team orchestration shell for OMC-RS"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dirs = "5"
tokio = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "omc-team"
path = "src/main.rs"
