[package]
name = "macro-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
omc-macros = { path = "../../crates/omc-macros" }
omc-shared = { path = "../../crates/omc-shared" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
